--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <ul id="peers-container"></ul>
     <form class="message-form">
-        <input type="text" name="message" id="message"/>
-        <button type="submit">Send message</button>
+      <input type="text" name="message" id="message" />
+      <button type="submit">Send message</button>
     </form>
     <ul class="messages-list"></ul>
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
