--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
       <button type="submit">Send message</button>
     </form>
     <ul class="messages-list"></ul>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
