data channel integration
Added the ability to use a p2p channel for data transfer

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
         <input type="text" name="id" class="selected-id" placeholder="client ID" />
         <button type="submit" class="establish-connection-btn">Establish a connection</button>
       </form>
+      <button id="messageBtn">message</button>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
